# tom

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  Makefile.inc  README.md  README.md~  build_debug_with_clang_and_install_locally.sh  build_fast_with_clang_and_install_locally.sh  build_with_clang_and_install_locally.sh  build_with_gcc_and_install_locally.sh  build_with_gcc_on_OSX_and_install_locally.sh  setup.cfg  setup.py
doc/: doxy2swig.py  example.ipynb  tom.doxyfile  tom_xml.doxyfile
include/tom/: CerealTom.h  CoreSequences.h  EfficiencySharpening.h  Estimator.h  Hmm.h  Implementations.h  LinearAlgebra.cpp  LinearAlgebra.h  Macros.h  Oom.cpp  Oom.h  Policy.h  PomdpTools.h  Random.h  Sequence.h  StopCondition.h  tom.h
matlab/: read_oom.m  read_sequence.m  write_oom.m  write_sequence.m
python/: setup.py  tom.py  tomhmm.py  tomio.py  tomlearn.py  tomseqs.py
python/tests/: 10.seq  10.seq.bz2  10_10000.seq  10_10000.seq.bz2  10_10000.stree.bz2  3_2_10000.stree.bz2  4_3_10000.seq.bz2  4x3_10000.seq.bz2  4x3_10000.stree.bz2  __init__.py  mississippi.seq  mississippi.seq.bz2  pc_10000.seq  pc_10000.seq.bz2  pc_10000.stree.bz2  sequence_test.py  stree_test.py  words_test.py
python/tom/: __init__.py  _tomlib.py  (+6 more)
research/: Compute.ipynb  Plots.ipynb  README.md  Tools.ipynb
src/: tom.cpp
swig/: _tomlib.i  _tomlib_wrap.cpp  _tomlib_wrap.h  collection.i  eigen3.i  eigen3_test.i  eigen3_test.py  stree.i  tom_doc.i  tomdoc.i  tomlib.i  tomlib_wrap.cxx  tomlib_wrap.h
test/: 10.stree.bz2  3_2_10000.seq  4x3_10000.seq  mississippi.stree.bz2  testtom.py
(+53 files in other folders)
